crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_self_closing_tag.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 3,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [],
                    children: [],
                },
            ),
        },
    ],
    script: None,
    css: None,
}
