crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_text_node-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            metadata: Location {
                start: 3,
                end: 7,
            },
            node_type: Text(
                "hello",
            ),
        },
    ],
    script: None,
    css: None,
}
