crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_text_node-3.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 10,
            },
            node_type: Text(
                "hello hello",
            ),
        },
    ],
    script: None,
    css: None,
}
