crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_text_node-4.snap
---
source: decorous-frontend/src/parser.rs
expression: parser.parse_nodes()
---
[
    Node {
        loc: Location {
            start: 0,
            end: 0,
        },
        node_type: Text(
            "你",
        ),
    },
]
