crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_text_node-8.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            metadata: Location {
                start: 0,
                end: 0,
            },
            node_type: Text(
                "<",
            ),
        },
        Node {
            metadata: Location {
                start: 1,
                end: 6,
            },
            node_type: Text(
                ">hello",
            ),
        },
    ],
    script: None,
    css: None,
}
