crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_text_node.snap
---
source: decorous-frontend/src/parser.rs
expression: parser.parse_nodes()
---
[
    Node {
        loc: Location {
            start: 0,
            end: 4,
        },
        node_type: Text(
            "hello",
        ),
    },
]
