crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__cannot_have_scripts_in_invalid_positions.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            metadata: Location {
                start: 0,
                end: 29,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [],
                    children: [
                        Node {
                            metadata: Location {
                                start: 4,
                                end: 26,
                            },
                            node_type: Error,
                        },
                    ],
                },
            ),
        },
    ],
    script: None,
    css: None,
}
