crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__continues_parsing_if_unmatched_tag_found-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 16,
            end: 16,
        },
        node_type: Text(
            "\n",
        ),
    },
    Node {
        loc: Location {
            start: 17,
            end: 98,
        },
        node_type: Element(
            Element {
                tag: "span",
                attrs: [],
                children: [
                    Node {
                        loc: Location {
                            start: 23,
                            end: 44,
                        },
                        node_type: Text(
                            "hello\n                ",
                        ),
                    },
                    Node {
                        loc: Location {
                            start: 45,
                            end: 51,
                        },
                        node_type: Element(
                            Element {
                                tag: "p",
                                attrs: [],
                                children: [],
                            },
                        ),
                    },
                    Node {
                        loc: Location {
                            start: 68,
                            end: 68,
                        },
                        node_type: Text(
                            "\n",
                        ),
                    },
                    Node {
                        loc: Location {
                            start: 69,
                            end: 81,
                        },
                        node_type: Element(
                            Element {
                                tag: "span",
                                attrs: [],
                                children: [],
                            },
                        ),
                    },
                    Node {
                        loc: Location {
                            start: 98,
                            end: 98,
                        },
                        node_type: Text(
                            "\n",
                        ),
                    },
                ],
            },
        ),
    },
]
